# LMeeAnaFW

./: .gitignore  README.md
AddTaskConfigs/: Config_sscheid_efficiencyV2.C  Config_sscheid_lowmass_pPb_FAST_AOD_1.C  Config_sscheid_lowmass_pPb_FAST_AOD_2.C  README.md  updateConfigsAlien.sh  (+3 more)
PlottingFW/: .ExcessSpectra.cxx.swm  .ExcessSpectra.cxx.swn  .ExcessSpectra.cxx.swo  .ExcessSpectra.cxx.swp  .Makefile.swp  CMakeLists.txt  Makefile  Makefile.orig  README.md  cSubSigCocktail_Mee_bin4.C~
PlottingFW/doc/: Doxyfile
PlottingFW/hf_fits/: AutoDict_allocator_pair_const_TString_double___.cxx  AutoDict_map_TString_double_less_TString__allocator_pair_const_TString_double_____.cxx  AutoDict_pair_const_TString_double_.cxx  AutoDict_vector_TH2D_.cxx  ProcessRawCocktail.cxx  ProcessRawCocktail.cxx~  fitNewDec.cxx  fitNewDec.cxx~  theo_pp_newcocktail.cpp
PlottingFW/src/: .LmBackground.cpp.swp  .LmCocktail.cpp.swj  .LmCocktail.cpp.swk  .LmCocktail.cpp.swl  .LmCocktail.cpp.swm  .LmCocktail.cpp.swn  .LmCocktail.cpp.swo  .LmCocktail.cpp.swp  .LmCocktailMan.cpp.swo  .LmCocktailMan.h.swp  .LmHandler.cpp.swh  .LmHandler.cpp.swi  .LmHandler.cpp.swj  .LmHandler.cpp.swk  .LmHandler.cpp.swl  .LmHandler.cpp.swm  .LmHandler.cpp.swn  .LmHandler.cpp.swo  .LmHandler.cpp.swp  .LmHelper.cpp.swm  .LmHelper.cpp.swn  .LmHelper.cpp.swo  .LmHelper.cpp.swp  .LmManager.cpp.swl  .LmManager.cpp.swm  .LmManager.cpp.swn  .LmManager.cpp.swo  .LmManager.cpp.swp  .LmMultiQA.cpp.swp  .LmQA.cpp.swo  .LmQA.cpp.swp  .LmQA.h.swp  .LmSignal.cpp.swp  .LmSignal.h.swp  .carsten_sys.cpp.swp  .carsten_sys.h.swn  .carsten_sys.h.swp  .jerome.cpp.svu  .jerome.cpp.svv  .jerome.cpp.svw  (+107 more)
PlottingFW/src/core/: LmBackground.cpp  LmBackground.h  LmBaseManager.cpp  LmBaseManager.h  LmBaseSignal.h  LmCocktail.h  LmCocktail.h.orig  LmCocktailMan.cpp  LmCocktailMan.cpp.orig  LmCocktailMan.h  LmCocktailPart.cpp  LmCocktailPart.h  LmCocktailPart.h.orig  LmFileManager.h  LmFitFunctions.cpp  LmHandler.cpp  LmHandler.h  LmHelper.cpp  LmHelper.cpp.orig  LmHelper.h  LmManager.cpp  LmManager.cpp.orig  LmManager_save.cpp  LmMultiQA.cpp  LmQA.cpp  LmQA.cpp.orig  LmRebinner.cpp  LmRebinner.h  LmSignal.cpp  LmSignal.cpp.orig  LmSignal.h
PlottingFW/src/user/: carsten.cpp  carsten.h  carsten_phiV.cpp  carsten_phiV.h  carsten_sys.cpp  carsten_sys.h  jerome.cpp  jerome.h  jerome_PbPb.cpp  jerome_PbPb.h  jerome_sys.cpp  jerome_sys.h  main.cpp  nadia.cpp  nadia.cxx  nadia.h  pat_sys.cpp  patrick.cpp  patrick.h  patrick_bg.cpp  patrick_bg.h  patrick_common.h  patrick_syst_old.cpp  patrick_syst_old.h  sebastian.cpp  sebastian.h  sebastian_backup.cpp  theo.cpp  theo.h  theo_Misc.cpp  theo_pPb.cpp  theo_pp.cpp  theo_pp.h
(+32 files in other folders)
